# safers-cli

./: Cargo.toml  README.md
examples/: TEST_COMMANDS.md  TEST_COMMANDS_CAST.md  aerodrome-withdraw.json  authorize-tgbp-usdc-pool.json  custom-call.json  enable-module.json  erc20-transfer.json  rejection.json  set-guard.json  set_strategy_bot.json  test-withdraw-not-whitelisted.json  test-withdraw-whitelisted.json  transaction.json  whitelist-aero.json  whitelist-aerodrome-factory.json  whitelist-aerodrome-router-v2.json  whitelist-aerodrome-router.json  whitelist-aerodrome-voter.json  whitelist-tgbp-usdc-gauge.json  whitelist-tgbp-usdc-pool.json  whitelist-tgbp.json  whitelist-usdc.json  whitelist-weth.json  whitelist-withdrawal-address.json
scripts/: configure-safes.sh  get_safe_tx_for_signing.sh  propose-whitelist-transactions.sh  replace-guard-address.sh  sign_safe_builder_json.sh  test_safe_api.sh
src/: cli.rs  commands.rs  contracts.rs  hardware_wallet.rs  main.rs  signatures.rs  types.rs  utils.rs
